--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user: neo4j
+github_user: akollegger
 github_repo_count: 4
 github_show_profile_link: true
 github_skip_forks: true
