--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ url: http://neo4j-org.heroku.com
 title: Neo4j
 subtitle: the graph database
 author: Neo Technology
-latest_version: 1.8.M06
+latest_version: 1.8.M07
+latest_readme: http://blog.neo4j.org/2012/08/neo4j-18m07-sharing-is-caring.html
 simple_search: http://google.com/search
 description: Neo4j is an open source graph database
 
